--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=4001
-MONGO_CONN_URI=mongodb+srv://smartColony:smartColony123@smartcolony.owtvtju.mongodb.net/civilCare?appName=smartColony/CivilCare&retryWrites=true&w=majority
+MONGO_CONN_URI=mongodb+srv://smartColony:smartColony123@smartcolony.owtvtju.mongodb.net/civilCare?retryWrites=true&w=majority
 JWT_SECRET=My_jwt_secret_key
 NODE_ENV=development
