--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.16"
