--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,11 @@ PORT=4001
 MONGO_CONN_URI=mongodb+srv://smartColony:smartColony123@smartcolony.owtvtju.mongodb.net/civilCare?retryWrites=true&w=majority
 JWT_SECRET=My_jwt_secret_key
 NODE_ENV=development
+
+
+# Email Configuration
+EMAIL_USER=pateljainish2021@gmail.com
+EMAIL_PASSWORD=inva ckiq drcp mliv
+FRONTEND_URL=http://localhost:5173
+
+
