add email config in env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,8 @@
 PORT=
 MONGO_CONN_URI=
 JWT_SECRET=
+
+# Email Configuration
+EMAIL_USER=pateljainish2021@gmail.com
+EMAIL_PASSWORD=inva ckiq drcp mliv
+FRONTEND_URL=http://localhost:5173
