--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.4.1",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
